--- a/views/articles/form.ejs
+++ b/views/articles/form.ejs
@@ -6,13 +6,13 @@
 
 <div class = 'form-group'>
     <label for='description'>Context</label>
-    <textarea name= 'description' id= 'description' class = 'form-control'></textarea>
+    <textarea required name= 'description' id= 'description' class = 'form-control'></textarea>
 
 </div>
 
 <div class = 'form-group'>
     <label for='markdown'>Markdown</label>
-    <textarea name= 'markdown' id= 'markdown' class = 'form-control'></textarea>
+    <textarea required name= 'markdown' id= 'markdown' class = 'form-control'></textarea>
 </div>
 
 <br>
